thymeleaf other form

--- a/src/main/resources/templates/messages.html
+++ b/src/main/resources/templates/messages.html
@@ -38,7 +38,7 @@
         
         cell1.innerHTML = '<td>' + data.id+ '</td>';
         cell2.innerHTML = '<td>' + data.text + '</td>';
-        cell3.innerHTML = '<td>' + data.date + '</td>';
+        cell3.innerHTML = '<td>' + data.createdAt + '</td>';
     }
 </script>
 </body>
